--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
-style.css
+body {
+background-color: lightgray;
+font-family: 'Quicksand', sans-serif;
+text-align: center;
+font-size: 18pt;
+
+}
+h1{
+font-weight: bolder;
+color:teal;
+font-size: 48pt;
+border-bottom: 2px dotted black;
+
+
+}
+
+img {
+align-content: center;
+
+}
